--- a/Ctl/dev/docker-compose.yml
+++ b/Ctl/dev/docker-compose.yml
@@ -54,9 +54,9 @@ services:
     container_name: peeringdb
     command: runserver 0.0.0.0:8000
     env_file: .env
-    depends_on:
-      - database
-      - elasticsearch
+    # depends_on:
+      # - database
+      # - elasticsearch
     environment:
       DATABASE_USER: peeringdb
       DATABASE_PASSWORD: devPASSWORD
@@ -66,11 +66,11 @@ services:
     ports:
       # this needs to be set in the shell, compose env vars aren't read yet
       - "${DJANGO_PORT:-8000}:8000"
-    volumes:
-      - ../../peeringdb_server:/srv/www.peeringdb.com/peeringdb_server:Z
-      - ../../mainsite:/srv/www.peeringdb.com/mainsite:Z
-      - ../../tests:/srv/www.peeringdb.com/tests:Z
-      - ../../docs:/srv/www.peeringdb.com/docs:Z
+    # volumes:
+      # - ../../peeringdb_server:/srv/www.peeringdb.com/peeringdb_server:Z
+      # - ../../mainsite:/srv/www.peeringdb.com/mainsite:Z
+      # - ../../tests:/srv/www.peeringdb.com/tests:Z
+      # - ../../docs:/srv/www.peeringdb.com/docs:Z
 
       # uncomment if you want indexed search data to be persistent
       # - ../../search-data:/srv/www.peeringdb.com/search-data
