--- a/Ctl/dev/docker-compose.yml
+++ b/Ctl/dev/docker-compose.yml
@@ -1,49 +1,49 @@
 version: "3.4"
 services:
-  database:
-    image: "mysql:8"
-#    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-    environment:
-      MYSQL_DATABASE: peeringdb
-      MYSQL_USER: peeringdb
-      MYSQL_PASSWORD: devPASSWORD
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
-    restart: always
-    ports:
-     - "127.0.0.1:13306:3306"
-    volumes:
-      - peeringdb_database:/var/lib/mysql:Z
-    networks:
-      - peeringdb_network
+#   database:
+#     image: "mysql:8"
+# #    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+#     environment:
+#       MYSQL_DATABASE: peeringdb
+#       MYSQL_USER: peeringdb
+#       MYSQL_PASSWORD: devPASSWORD
+#       MYSQL_ALLOW_EMPTY_PASSWORD: 1
+#     restart: always
+#     ports:
+#      - "127.0.0.1:13306:3306"
+#     volumes:
+#       - peeringdb_database:/var/lib/mysql:Z
+#     networks:
+#       - peeringdb_network
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
-    env_file: .env
-    ports:
-      - "127.0.0.1:9200:9200"
-    environment:
-      - discovery.type=single-node
-    networks:
-      - peeringdb_network
-    deploy:
-      resources:
-        limits:
-          memory: 2048M
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
+  #   env_file: .env
+  #   ports:
+  #     - "127.0.0.1:9200:9200"
+  #   environment:
+  #     - discovery.type=single-node
+  #   networks:
+  #     - peeringdb_network
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 2048M
 
-  redis:
-    image: "docker.io/redis:7"
-    restart: always
-    command:
-      - sh
-      - -c
-      - redis-server --requirepass "$${REDIS_PASSWORD:?REDIS_PASSWORD variable is not set}"
-    env_file: .env
-    ports:
-      - "127.0.0.1:6379:6379"
-    networks:
-      - peeringdb_network
-    volumes:
-      - peeringdb_redis_data:/data:Z
+  # redis:
+  #   image: "docker.io/redis:7"
+  #   restart: always
+  #   command:
+  #     - sh
+  #     - -c
+  #     - redis-server --requirepass "$${REDIS_PASSWORD:?REDIS_PASSWORD variable is not set}"
+  #   env_file: .env
+  #   ports:
+  #     - "127.0.0.1:6379:6379"
+  #   networks:
+  #     - peeringdb_network
+  #   volumes:
+  #     - peeringdb_redis_data:/data:Z
 
   peeringdb:
     user: "0:0"
@@ -95,9 +95,9 @@ services:
       - peeringdb_network
 
 
-volumes:
-  peeringdb_database:
-  peeringdb_redis_data:
+# volumes:
+#   peeringdb_database:
+#   peeringdb_redis_data:
 
-networks:
-  peeringdb_network:
+# networks:
+#   peeringdb_network:
