--- a/Ctl/dev/docker-compose.yml
+++ b/Ctl/dev/docker-compose.yml
@@ -91,8 +91,8 @@ services:
       # directory
       # - ../../../django-peeringdb/src/django_peeringdb:/srv/www.peeringdb.com/venv/lib/python3.11/site-packages/django_peeringdb:Z
 
-    networks:
-      - peeringdb_network
+    # networks:
+    #   - peeringdb_network
 
 
 # volumes:
